feat: add unauthenticated response for oss-index
Signed-off-by: Ruben Romero Montes <rromerom@redhat.com>